fix: `ProductCard`'s title overflow

--- a/packages/ui/src/styles/base/utilities.scss
+++ b/packages/ui/src/styles/base/utilities.scss
@@ -102,4 +102,5 @@ $base: 16px !default;
   line-clamp: $max-lines;
   text-overflow: -o-ellipsis-lastline;
   text-overflow: ellipsis;
+  white-space: normal;
 }
